--- a/resources/css/test.css
+++ b/resources/css/test.css
@@ -1,42 +1,4 @@
-.dbTh{
-	overflow: hidden;
-	white-space: nowrap;
-	text-align: center;
-	border-top: 0 none;
-	border-bottom: 0 none;
-	border-right: 1px solid #E1E1E1!important;
-	text-align: left!important;
-	height: 22px;
-	line-height: 15px;
-	padding: 0 2px 0 2px;
-	font-weight: bold;
-	display: table-cell;
-	vertical-align: inherit;
-	color: #777;
-	text-shadow: none;
-	font-size: 13px;
-	/*background-color: #eff3f8;*/
-	min-width: 50px;
-	cursor: pointer;
-}
-.dbDiv{
-	padding-top: 12px;
-	padding-bottom: 12px;
-	position: relative;
-	height: 17px;
-	padding-left: 4px;
-	font-size: 13px;
-	color: #777;
-	font-weight: 700;
-	overflow: visible;
-}
-.pageUl{
-	width:auto;
-	height: auto;
-}
-.pageUl li{
-	list-style-type:none;
-	float: left;
-	height:30px;
-	line-height: 30px;
+.swan {
+    width:100px;
+    height:100px;
 }
